New design added, first taste is okkkk

--- a/_posts/2011-06-03-schoolmates-from-over-70-countries.haml
+++ b/_posts/2011-06-03-schoolmates-from-over-70-countries.haml
@@ -3,6 +3,6 @@ layout: page
 categories: 
   - fun
 title: Schoolmates from over 70 countries in the world
-short: Students From 70 Countries
+short: With Students From More Than 70 Countries
 excerpt: You can learn anywhere you want
 ---
