--- a/_posts/2011-06-03-non-stop-learning.haml
+++ b/_posts/2011-06-03-non-stop-learning.haml
@@ -3,6 +3,6 @@ layout: page
 categories: 
   - fun
 title: Non-stop learning
-short: 24/7 non-stop learning
+short: Practice 24 hours a day, 7 days a week from home
 excerpt: You can learn anywhere and anytime you want, no need to go to school
 ---
