--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,25 +1,29 @@
 <div id="sidebar"  class="col-1">
-  <h4>How It Works?</h4>
-  <ul>
-    <li><a href="">Starting up</a></li>
-    <li><a href="">The School</a></li>
-    <li><a href="/teachers">Teachers</a></li>
-    <li><a href="">Classes</a></li>
-    <li><a href="">Students</a></li>    
-    <li><a href="">Technical Requirements</a></li>    
-  </ul>
-  
-  <h4>What You'll Learn?</h4>
-  <ul>
-    {% for l in site.categories.follow-your-interests reversed %}
-    <li><a href="">{{ l.short }}</a></li>
-    {% endfor %}
-  </ul>
-  
-  <h4>What You'll Get? Certificates</h4>
-  <ul>
-    {% for l in site.categories.certificates reversed %}
-    <li><a href="">{{ l.short }}</a></li>
-    {% endfor %}
-  </ul>
+  <div id="inside">
+    <h3>How It Works?</h3>
+    <div id="items">
+      <ul>
+        <li><a href="">Starting up</a></li>
+        <li><a href="">The School</a></li>
+        <li><a href="/teachers">Teachers</a></li>
+        <li><a href="">Classes</a></li>
+        <li><a href="">Students</a></li>    
+        <li><a href="">Technical Requirements</a></li>    
+      </ul>
+    </div>
+    
+    <h3>What You'll Learn?</h3>
+    <ul>
+      {% for l in site.categories.follow-your-interests reversed %}
+      <li><a href="">{{ l.short }}</a></li>
+      {% endfor %}
+    </ul>
+    
+    <h3>What You'll Get?</h3>
+    <ul>
+      {% for l in site.categories.certificates reversed %}
+      <li><a href="">{{ l.short }}</a></li>
+      {% endfor %}
+    </ul>
+  </div>
 </div>
