--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,11 @@ layout: default
   {% include sidebar.html %}
   
   <div id="main" class="col-2">
-    <h1>{{ page.title }}</h1>
-    <div id="body">
+    <h1 class="large block">
+      <div class="title">{{ page.title }}</div>
+    </h1>
+    <div class="triangle triangle-top"></div>
+    <div id="excerpt">
       {{ content }}
     </div>
     {% include more.html %}    
