--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
     <script type="text/javascript">
       var myfont_webfont_test = false;
       var woffEnabled = true;
+      var customPath = '/css';
     </script>
     <script type="text/javascript" src="/css/MuseoSans.js"></script>
     
