--- a/_posts/2011-06-03-average-six-students-per-class.haml
+++ b/_posts/2011-06-03-average-six-students-per-class.haml
@@ -1,8 +1,9 @@
 ---
-layout: page
+layout: post
 categories: 
   - fun
 title: Average 6 students / 1 hour classes
 short: Average 6 students / class
-excerpt: You can learn anywhere you want
+excerpt: Article summary goes here ...
 ---
+Article body goes here ...
