--- a/_posts/2011-06-03-choose-your-own-level.haml
+++ b/_posts/2011-06-03-choose-your-own-level.haml
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: post
 categories: 
   - follow-your-interests
 title: Choose your own level of learning
@@ -9,5 +9,6 @@ list:
   - intermediate
   - advanced
   - refresher
-excerpt: You can learn anywhere you want
+excerpt: Article summary goes here ...
 ---
+Article body goes here ...
