--- a/_posts/2011-06-03-choose-your-study-purpose.haml
+++ b/_posts/2011-06-03-choose-your-study-purpose.haml
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: post
 categories: 
   - follow-your-interests
 title: Choose your study purpose
@@ -10,5 +10,6 @@ list:
   - british english
   - american english
   - exam preparation
-excerpt: You can learn anywhere you want
+excerpt: Article summary goes here ...
 ---
+Article body goes here ...
