--- a/_posts/2011-06-03-learn-at-home-or-while-traveling.haml
+++ b/_posts/2011-06-03-learn-at-home-or-while-traveling.haml
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: post
 categories: 
   - comfortable
 title: Learn at home or while traveling
@@ -8,4 +8,4 @@ images:
   - url: /images/home.jpg
   - url: /images/tram.jpg
 ---
-
+Article body goes here ...
