--- a/_posts/2011-06-03-many-common-topics-available.haml
+++ b/_posts/2011-06-03-many-common-topics-available.haml
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: post
 categories: 
   - follow-your-interests
 title: Many Common Topics Available
@@ -9,5 +9,6 @@ list:
   - leisure
   - travel
   - health  
-excerpt: You can learn anywhere you want
+excerpt: Article summary goes here ...
 ---
+Article body goes here ...
