--- a/_posts/2011-06-03-non-stop-learning.haml
+++ b/_posts/2011-06-03-non-stop-learning.haml
@@ -1,8 +1,9 @@
 ---
-layout: page
+layout: post
 categories: 
   - fun
 title: Non-stop learning
 short: Practice 24 hours a day, 7 days a week from home
 excerpt: You can learn anywhere and anytime you want, no need to go to school
 ---
+Article body goes here ...
