--- a/_posts/2011-06-03-schoolmates-from-over-70-countries.haml
+++ b/_posts/2011-06-03-schoolmates-from-over-70-countries.haml
@@ -1,8 +1,9 @@
 ---
-layout: page
+layout: post
 categories: 
   - fun
 title: Schoolmates from over 70 countries in the world
 short: With Students From More Than 70 Countries
-excerpt: You can learn anywhere you want
+excerpt: Article summary goes here ...
 ---
+Article body goes here ...
