--- a/_posts/2011-06-03-the-esol-certificate.haml
+++ b/_posts/2011-06-03-the-esol-certificate.haml
@@ -4,5 +4,5 @@ categories:
   - certificates
 title: The Cambridge ESOL Certificate
 short: ESOL
-excerpt: You can learn anywhere you want
+excerpt: Article summary goes here ...
 ---
