--- a/_posts/2011-06-03-the-toles-certificate.haml
+++ b/_posts/2011-06-03-the-toles-certificate.haml
@@ -4,5 +4,5 @@ categories:
   - certificates
 title: The TOLES Certificate
 short: TOLES
-excerpt: You can learn anywhere you want
+excerpt: Article summary goes here ...
 ---
