--- a/_posts/2011-06-03-the-bulats-certificate.haml
+++ b/_posts/2011-06-03-the-bulats-certificate.haml
@@ -4,5 +4,5 @@ categories:
   - certificates
 title: The BULATS Certificate
 short: BULATS
-excerpt: You can learn anywhere you want
+excerpt: Article summary goes here ...
 ---
