--- a/_posts/2011-06-03-the-ielts-certificate.haml
+++ b/_posts/2011-06-03-the-ielts-certificate.haml
@@ -4,5 +4,5 @@ categories:
   - certificates
 title: The IELTS Certificate
 short: IELTS
-excerpt: You can learn anywhere you want
+excerpt: Article summary goes here ...
 ---
