--- a/_posts/2011-06-03-the-lcci-certificate.haml
+++ b/_posts/2011-06-03-the-lcci-certificate.haml
@@ -4,5 +4,5 @@ categories:
   - certificates
 title: The LCCI Certificate
 short: LCCI
-excerpt: You can learn anywhere you want
+excerpt: Article summary goes here ...
 ---
