--- a/_posts/2011-06-03-the-toefl-certificate.haml
+++ b/_posts/2011-06-03-the-toefl-certificate.haml
@@ -4,5 +4,5 @@ categories:
   - certificates
 title: The TOEFL Certificate
 short: TOEFL
-excerpt: You can learn anywhere you want
+excerpt: Article summary goes here ...
 ---
