Blank logos for certificates added

--- a/_posts/2011-06-03-the-esol-certificate.haml
+++ b/_posts/2011-06-03-the-esol-certificate.haml
@@ -4,5 +4,7 @@ categories:
   - certificates
 title: The Cambridge ESOL Certificate
 short: ESOL
+images:
+  - url: /images/cert-blank.jpg
 excerpt: Article summary goes here ...
 ---
