--- a/_posts/2011-06-03-the-lcci-certificate.haml
+++ b/_posts/2011-06-03-the-lcci-certificate.haml
@@ -4,5 +4,7 @@ categories:
   - certificates
 title: The LCCI Certificate
 short: LCCI
+images:
+  - url: /images/cert-blank.jpg
 excerpt: Article summary goes here ...
 ---
