--- a/_posts/2011-06-03-the-bulats-certificate.haml
+++ b/_posts/2011-06-03-the-bulats-certificate.haml
@@ -4,5 +4,7 @@ categories:
   - certificates
 title: The BULATS Certificate
 short: BULATS
+images:
+  - url: /images/cert-blank.jpg
 excerpt: Article summary goes here ...
 ---
