--- a/_posts/2011-06-03-the-ielts-certificate.haml
+++ b/_posts/2011-06-03-the-ielts-certificate.haml
@@ -4,5 +4,7 @@ categories:
   - certificates
 title: The IELTS Certificate
 short: IELTS
+images:
+  - url: /images/cert-blank.jpg
 excerpt: Article summary goes here ...
 ---
