--- a/_posts/2011-06-03-the-toefl-certificate.haml
+++ b/_posts/2011-06-03-the-toefl-certificate.haml
@@ -4,5 +4,7 @@ categories:
   - certificates
 title: The TOEFL Certificate
 short: TOEFL
+images:
+  - url: /images/cert-blank.jpg
 excerpt: Article summary goes here ...
 ---
