--- a/_posts/2011-06-03-the-toles-certificate.haml
+++ b/_posts/2011-06-03-the-toles-certificate.haml
@@ -4,5 +4,7 @@ categories:
   - certificates
 title: The TOLES Certificate
 short: TOLES
+images:
+  - url: /images/cert-blank.jpg
 excerpt: Article summary goes here ...
 ---
